--- a/6/5/less/index.less
+++ b/6/5/less/index.less
@@ -1,14 +1,15 @@
-//变量
-@import "var";
-//混入
-@import "mixins";
-//适配
-@import "adapter";
-//重置样式
-@import "reset";
-//模块
-@import "topBar";
-@import "banner";
-@import "nav";
-@import "tabs";
+@charset "UTF-8";
 
+/*变量*/
+@import "var.less";
+/*混入*/
+@import "mixins.less";
+/*适配*/
+@import "adapter.less";
+/*重置样式*/
+@import "reset.less";
+
+/*模块*/
+@import "topBar.less";
+
+@import "banner.less";
