--- a/6/5/less/topBar.less
+++ b/6/5/less/topBar.less
@@ -1,4 +1,4 @@
-.sn_topBar{
+.sn_topBar {
   width: 100%;
   height: 90rem/@baseFontSize;
   background: @snColor;
@@ -6,40 +6,40 @@
   left: 0;
   top: 0;
   z-index: 999;
-  a{
+  a {
     position: absolute;
     top: 0;
     width: 90rem/@baseFontSize;
     height: 90rem/@baseFontSize;
-    &.icon_category{
+    &.icon_category {
       left: 0;
       background: url("../images/icon_category.png") no-repeat center / 44rem/@baseFontSize 70rem/@baseFontSize;
     }
-    &.icon_cart{
+    &.icon_cart {
       right: 0;
       background: url("../images/icon_cart.png") no-repeat center / 63rem/@baseFontSize 68rem/@baseFontSize;
     }
   }
-  form{
+  form {
     width: 100%;
     padding: 0 90rem/@baseFontSize;
     position: relative;
-    .icon_search{
+    .icon_search {
       width: 30rem/@baseFontSize;
       height: 30rem/@baseFontSize;
       position: absolute;
       left: 100rem/@baseFontSize;
       top: 30rem/@baseFontSize;
-      background: url("../images/icon_search.png") no-repeat center / 27rem/@baseFontSize 28rem/@baseFontSize;
+      background: url("../images/icon_search.png") no-repeat center 27rem/@baseFontSize 28rem/@baseFontSize;
     }
-    input{
+    input {
       width: 100%;
       height: 60rem/@baseFontSize;
       margin-top: 15rem/@baseFontSize;
       border-radius: 5rem/@baseFontSize;
       background: rgba(255,255,255,0.3);
       font-size: 24rem/@baseFontSize;
-      padding-left:50rem/@baseFontSize;
+      padding-left: 50rem/@baseFontSize;
     }
   }
 }
