--- a/13/public/m/css/common.css
+++ b/13/public/m/css/common.css
@@ -28,7 +28,6 @@
 .ct_container .ct_header a {
     position: absolute;
     top: 0;
-    right: 0;
     width: 45px;
     height: 45px;
 }
@@ -38,11 +37,11 @@
 }
 
 .ct_container .ct_header .left {
-    float: left;
+    left: 0;
 }
 
 .ct_container .ct_header .right {
-    float: right;
+    right: 0;
 }
 
 .ct_container .ct_footer {
@@ -76,7 +75,7 @@
 .ct_container .ct_content {
     width: 100%;
     height: 100%;
-    padding: 45pc 0 55px 0;
+    padding: 45px 0 55px 0;
 }
 
 .ct_container .ct_content .ct_wrapper {
